Prevent tiles on mobile (single column) from expanding horizontally if content overflows

--- a/src/sass/_tiles.scss
+++ b/src/sass/_tiles.scss
@@ -9,7 +9,7 @@
 
     display: grid;
     grid-column-gap: 3%;
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 1fr);
     box-sizing: border-box;
 
 	* {
